Fixed text alignment

--- a/public/css/mainboard.css
+++ b/public/css/mainboard.css
@@ -16,8 +16,8 @@
 }
 
 .bg {
-    width: 24vw;
-    height: 15.6vw;
+    width: 22vw;
+    height: 14.3vw;
 }
 
 .md {
@@ -43,18 +43,32 @@
     height: 13%;
     padding:0;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: min(14px, 1vw, 4vh) !important;
+    font-size: min(13px, 1vw, 4vh) !important;
+    color: rgba(123, 123, 123, 0.642);
+    text-shadow: 0.5px 0.5px 0.7px rgba(104, 104, 104, 0.286);
+}
+
+.sm .msg-footer {
+    height: 13%;
+    padding:0;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: min(10px, 1vw, 4vh) !important;
     color: rgba(123, 123, 123, 0.642);
     text-shadow: 0.5px 0.5px 0.7px rgba(104, 104, 104, 0.286);
 }
 
 .msg-half {
-    width: 50%;
+    width: 50% !important;
     object-fit: contain;
 }
 
 .material-icons {
-    font-size: min(15px, 2.3vw, 10vh);
+    font-size: min(13px, 2vw, 5vh);
+    vertical-align: middle;
+}
+
+.sm .material-icons {
+    font-size: min(10px, 2vw, 5vh) !important;
     vertical-align: middle;
 }
 
@@ -67,7 +81,9 @@
 
 .msg-text {
     max-height: 100%;
+    width:100%;
     padding-left: min(0.7vw, 3vh, 10px);
+    object-fit: contain;
     overflow: hidden;
     word-wrap: break-word;
 }
